feat: Add refresh-reviews script to manually refresh cached product reviews

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "fetch-payments": "node scripts/fetchAllPayments.js"
+    "fetch-payments": "node scripts/fetchAllPayments.js",
+    "refresh-reviews": "node scripts/refreshAllReviews.js"
   },
   "type": "module",
   "keywords": [],
