refactor: Add test-token-refresh script to package.json for improved token testing

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.js",
     "fetch-payments": "node scripts/fetchAllPayments.js",
     "refresh-reviews": "node scripts/refreshAllReviews.js",
-    "refresh-all-tokens": "node scripts/forceRefreshAllTokens.js"
+    "refresh-all-tokens": "node scripts/forceRefreshAllTokens.js",
+    "test-token-refresh": "node scripts/testTokenRefresh.js"
   },
   "type": "module",
   "keywords": [],
