feat: Implement admin management system with authentication, role-based access, and worker tracking
- Added system health check and worker status endpoints in system.controller.js
- Created admin authentication middleware for JWT verification and role checks
- Developed admin user model with password hashing and JWT generation
- Implemented plan configuration model and service for managing subscription plans
- Introduced constants for plan features and templates
- Added worker tracking utility for monitoring worker execution status
- Established routes for admin management, system health, and plan configurations
- Included error handling and logging for improved debugging and system reliability

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "seed-admin": "node scripts/seedAdmin.js",
+    "test-admin-login": "node scripts/testAdminLogin.js",
     "fetch-payments": "node scripts/fetchAllPayments.js",
     "refresh-reviews": "node scripts/refreshAllReviews.js",
     "refresh-all-tokens": "node scripts/forceRefreshAllTokens.js",
