--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.1",
     "react-joyride": "^2.9.3",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.4.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
