--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,7 +25,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-joyride": "^2.9.3",
+    "@list-labs/react-joyride": "^2.9.3",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.4.1",
     "zustand": "^5.0.8"
